Fix text/icon spacing in RTL

--- a/apps/src/dance/ai/dance-ai-modal.module.scss
+++ b/apps/src/dance/ai/dance-ai-modal.module.scss
@@ -423,10 +423,6 @@ $ai-modal-border-width: 8px;
     &SmallText {
       font-size: 12px;
     }
-
-    &Icon {
-      margin-right: 10px;
-    }
   }
 }
 
